scripts/nullaway/annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8.txt
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:564: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:568: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:816: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:820: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:1216: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:1220: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:1599: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:1603: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:1982: error: [NullAway] dereferenced expression this.w is @Nullable
                if (!this.w.equals(that.w))
                           ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2030: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2034: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2424: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2428: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2707: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2711: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Work.java:341: error: [NullAway] dereferenced expression this.comment is @Nullable
      if (!this.comment.equals(that.comment))
                       ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Work.java:399: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
    schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Work.java:403: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
    schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/CalculatorServer.java:26: error: [NullAway] dereferenced expression w is @Nullable
        return w.getNum1() + w.getNum2();
                ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
19 errors
